# intel-gpu-tools

./: .gitignore  Android.mk  CONTRIBUTING  COPYING  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac  i810_reg.h
assembler/: .gitignore  AUTHORS  COPYING  Makefile  Makefile.am  README  TODO  brw_compat.h  brw_context.c  brw_context.h  brw_defines.h  brw_disasm.c  brw_eu.c  brw_eu.h  brw_eu_compact.c  brw_eu_debug.c  brw_eu_emit.c  brw_reg.h  brw_structs.h  configure.ac  disasm-main.c  disasm.c  gen4asm.h  gen8_disasm.c  gen8_instruction.c  gen8_instruction.h  gram.c  gram.y  intel-gen4asm.pc.in  lex.c  lex.l  main.c  packed_yuv_sf.g4a  packed_yuv_wm.g4a  ralloc.h
assembler/doc/: Makefile.am
assembler/src/: Makefile.am  brw_defines.h  brw_structs.h  disasm-main.c  disasm.c  gen4asm.h  gram.y  lex.l  main.c
assembler/test/: .gitignore  Makefile.am  break.expected  break.g4a  cont.expected  cont.g4a  declare.expected  declare.g4a  else.expected  else.g4a  endif.expected  endif.g4a  frc.expected  halt.expected  halt.g4a  if.expected  if.g4a  iff.expected  iff.g4a  immediate.expected  immediate.g4a  jmpi.expected  jmpi.g4a  lzd.expected  lzd.g4a  mov.g4a  not.expected  not.g4a  rndd.expected  rndd.g4a  rnde-intsrc.expected  rnde-intsrc.g4a  rnde.expected  rnde.g4a  rndu.expected  rndu.g4a  rndz.expected  rndz.g4a  run-test.sh  wait.expected  (+3 more)
benchmarks/: .gitignore  Android.mk  Makefile.am  Makefile.sources  README  gem_blt.c  gem_create.c  gem_exec_ctx.c  gem_exec_nop.c  gem_exec_reloc.c  gem_exec_trace.c  gem_exec_tracer.c  gem_latency.c  gem_mmap.c  gem_prw.c  gem_set_domain.c  gem_syslatency.c  gem_userptr_benchmark.c  gem_wait.c  generate_trace.c  intel_upload_blit_large.c  intel_upload_blit_large_gtt.c  intel_upload_blit_large_map.c  intel_upload_blit_large_vgem.c  intel_upload_blit_small.c  kms_vblank.c
benchmarks/ezbench.d/: gem_blt.test  gem_create.test  gem_exec_ctx.test  gem_exec_nop.test  gem_exec_reloc.test  gem_exec_trace.test  gem_latency.test  gem_mmap.test  gem_prw.test  gem_syslatency.test
debugger/: .gitignore  Makefile.am  debug_rdata.c  eudb.c
debugger/system_routine/: .gitignore  GNUmakefile.in  Makefile  Makefile.am  eviction_macro.c  pre_cpp.py  sr.g4a  test.g4a
lib/: Android.mk  Makefile.am  Makefile.sources  check-ndebug.h  debug.h  drmtest.c  drmtest.h  gen6_render.h  gen7_media.h  gen7_render.h  gen8_media.h  gen8_render.h  gen9_render.h  gpgpu_fill.c  gpgpu_fill.h  i830_reg.h  i915_3d.h  igt.cocci  igt.h  igt_aux.c  igt_aux.h  igt_core.c  igt_core.h  igt_debugfs.c  igt_debugfs.h  igt_display.c  igt_display.h  igt_draw.c  igt_draw.h  igt_edid.h  igt_edid_template.h  igt_fb.c  igt_fb.h  igt_gt.c  igt_gt.h  igt_kms.c  igt_kms.h  igt_pm.c  igt_pm.h  igt_stats.c  (+38 more)
lib/tests/: .gitignore  Android.mk  Makefile.am  Makefile.sources  igt_assert.c  igt_command_line.sh  igt_exit_handler.c  igt_fork_helper.c  igt_invalid_subtest_name.c  igt_list_only.c  igt_no_exit.c  igt_no_exit_list_only.c  igt_no_subtest.c  igt_segfault.c  igt_simple_test_subtests.c  igt_simulation.c  igt_stats.c  igt_subtest_group.c  igt_timeout.c
lib/uwildmat/: uwildmat.c  uwildmat.h
man/: .gitignore  Makefile.am  intel_aubdump.man  intel_aubdump.rst  intel_audio_dump.1  intel_audio_dump.man  intel_audio_dump.rst  intel_bios_dumper.1  intel_bios_dumper.man  intel_bios_dumper.rst  intel_bios_reader.1  intel_bios_reader.man  intel_bios_reader.rst  intel_error_decode.1  intel_error_decode.man  intel_error_decode.rst  intel_gpu_dump.1  intel_gpu_frequency.man  intel_gpu_frequency.rst  intel_gpu_top.1  intel_gpu_top.man  intel_gpu_top.rst  intel_gtt.1  intel_gtt.man  intel_gtt.rst  intel_infoframes.man  intel_infoframes.rst  intel_lid.1  intel_lid.man  intel_lid.rst  intel_panel_fitter.man  intel_panel_fitter.rst  intel_reg.rst  intel_reg_dumper.1  intel_reg_dumper.man  intel_reg_read.1  intel_reg_read.man  intel_reg_snapshot.1  intel_reg_snapshot.man  intel_reg_write.1  (+16 more)
overlay/: .gitignore  Makefile.am  README  chart.c  chart.h  config.c  cpu-top.c  cpu-top.h  debugfs.c  debugfs.h  gem-interrupts.c  gem-interrupts.h  gem-objects.c  gem-objects.h  gpu-freq.c  gpu-freq.h  gpu-perf.c  gpu-perf.h  gpu-top.c  gpu-top.h  igfx.c  igfx.h  overlay.c  overlay.h  perf.c  perf.h  power.c  power.h  rc6.c  rc6.h
overlay/kms/: kms-overlay.c
overlay/x11/: dri2.c  dri2.h  position.c  position.h  rgb2yuv.c  rgb2yuv.h  x11-overlay.c  x11-window.c
tests/: .gitignore  1  Android.mk  Makefile.am  Makefile.sources  NAMING-CONVENTION  ZZ_check_dmesg  ZZ_hangman  ZZ_missed_irq  blt_stress  check_drm_clients  core_auth.c  core_get_client_auth.c  core_getclient.c  core_getparams.c  core_getstats.c  core_getversion.c  core_prop_blob.c  core_setmaster_vs_auth.c  ddi_compute_wrpll  ddi_compute_wrpll.c  ddx_intel_after_fbdev  debugfs_emon_crash  debugfs_pipe_crc.c  debugfs_reader  debugfs_wedged  dpf_test  drm_auth.c  drm_get_client_auth  drm_get_client_auth.c  drm_import_export.c  drm_lib.sh  drm_read.c  drm_reg_read.c  drm_vma_limiter.c  drm_vma_limiter_cached.c  drm_vma_limiter_cpu.c  drm_vma_limiter_gtt.c  drv_debugfs_reader  drv_getparams.c  (+262 more)
tools/: .gitignore  Android.mk  Makefile.am  Makefile.sources  aubdump.c  hsw_compute_wrpll.c  igt_stats.c  intel_aubdump.in  intel_audio_dump.c  intel_backlight.c  intel_bios.h  intel_bios_dumper.c  intel_bios_reader.c  intel_decode.c  intel_decode.h  intel_decode_file.c  intel_disable_clock_gating.c  intel_display_crc.c  intel_display_poller.c  intel_dpio_read.c  intel_dpio_write.c  intel_dump_decode.c  intel_error_decode.c  intel_firmware_decode.c  intel_forcewaked.c  intel_framebuffer_dump.c  intel_gpu_abrt  intel_gpu_dump.c  intel_gpu_frequency.c  intel_gpu_time.c  intel_gpu_top.c  intel_gtt.c  intel_infoframes.c  intel_iosf_read.c  intel_iosf_sb_read.c  intel_iosf_sb_write.c  intel_l3_parity.c  intel_l3_parity.h  intel_l3_udev_listener.c  intel_lid.c  (+23 more)
tools/null_state_gen/: .gitignore  Makefile.am  intel_batchbuffer.c  intel_batchbuffer.h  intel_null_state_gen.c  intel_renderstate.h  intel_renderstate_gen6.c  intel_renderstate_gen7.c  (+2 more)
(+77 files in other folders)
